--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
-Welcome to {{title}}
-Hello {{user}}
-<ul>
-  <li>Laptop</li>
-  <li>Mouse</li>
-  <li>Keyboard</li>
-  <li>Monitor</li>
-</ul>
-<router-outlet></router-outlet>
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-category></app-category>
+    </div>
+    <div class="col-md-9">
+      <app-product></app-product>
+    </div>
+  </div>
+  <router-outlet></router-outlet>
+</div>
