--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,6 +1,13 @@
 <div *ngIf="dataLoaded==false" class="spinner-border text-warning" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün ara</label>
+  <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Arama ifadesi giriniz">
+</div>
+<div *ngIf="filterText" class="alert alert-success">
+  {{filterText}} aranıyor.
+</div>
 <table *ngIf="dataLoaded==true" class="table">
   <thead>
   <tr>
@@ -8,14 +15,19 @@
     <th>Ürün adı</th>
     <th>Kategori</th>
     <th>Fiyat</th>
+    <th>KDV'li fiyat</th>
     <th>Stok adedi</th>
   </tr>
   </thead>
-  <tr *ngFor="let product of products">
+  <tbody>
+  <tr *ngFor="let product of products | filterPipe:filterText">
     <td>{{product.productId}}</td>
-    <td>{{product.productName}}</td>
+    <td>{{product.productName |uppercase}}</td>
     <td>{{product.categoryId}}</td>
-    <td>{{product.unitPrice}}</td>
+    <td>{{product.unitPrice|currency:"₺"}}</td>
+    <td>{{product.unitPrice |vatAdded:18|currency:"₺"}}</td>
     <td>{{product.unitsInStock}}</td>
+    <td><button (click)="addToCart(product)" class="btn btn-success">Sepete ekle</button></td>
   </tr>
+  </tbody>
 </table>
